@@ -1,13 +1,10 @@
 package de.justinharder.trainharder.setup;
 
-import de.justinharder.trainharder.model.domain.Entitaet;
+import de.justinharder.trainharder.model.domain.*;
 import lombok.extern.slf4j.Slf4j;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.persistence.EntityManager;
-import javax.persistence.PersistenceContext;
-import javax.transaction.Transactional;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -17,40 +14,23 @@ public class TestdatenAnleger
 {
 	private static final String PERSISTENCE_UNIT_NAME = "hibernate.ejb.persistenceUnitName";
 
-	@PersistenceContext
-	private EntityManager entityManager;
-
-	@Transactional
-	public void legeTestdatenAn()
-	{
-		try
-		{
-			speichereTestdaten(entityManager, log::info);
-		}
-		catch (Exception e)
-		{
-			log.error(e.getMessage(), e);
-		}
-	}
-
 	public void loescheTestdaten(EntityManager entityManager, Consumer<String> logger)
 	{
 		var persistenceUnit =
 			entityManager.getEntityManagerFactory().getProperties().get(PERSISTENCE_UNIT_NAME).toString();
 		logger.accept("Beginne mit dem Löschen aller Testdatensätze für PU: " + persistenceUnit);
-		var tabellen = Arrays.asList(
-			"Authentifizierung",
-			"Belastungsfaktor",
-			"Koerpermessung",
-			"Kraftwert",
-			"Uebung",
-			"Benutzer");
-		tabellen.forEach(tabelle ->
-		{
-			logger.accept("Lösche Inhalte der Tabelle \"" + tabelle + "\".");
-			entityManager.createNativeQuery("DELETE FROM " + tabelle)
-				.executeUpdate();
-		});
+		List.of(
+			Authentifizierung.class.getSimpleName(),
+			Belastungsfaktor.class.getSimpleName(),
+			Koerpermessung.class.getSimpleName(),
+			Kraftwert.class.getSimpleName(),
+			Uebung.class.getSimpleName(),
+			Benutzer.class.getSimpleName())
+			.forEach(tabelle ->
+			{
+				logger.accept("Lösche Inhalte der Tabelle \"" + tabelle + "\".");
+				entityManager.createNativeQuery("DELETE FROM " + tabelle).executeUpdate();
+			});
 	}
 
 	public void speichereTestdaten(EntityManager entityManager, Consumer<String> logger)
@@ -70,10 +50,7 @@ public class TestdatenAnleger
 			.forEach(entitaet -> legeDatensatzAn(entityManager, logger, entitaet));
 	}
 
-	private <T extends Entitaet> void legeDatensatzAn(
-		EntityManager entityManager,
-		Consumer<String> logger,
-		T entitaet)
+	private <T extends Entitaet> void legeDatensatzAn(EntityManager entityManager, Consumer<String> logger, T entitaet)
 	{
 		logger.accept("Weiter mit Datensatz " + entitaet);
 		var datensatz = entityManager.find(entitaet.getClass(), entitaet.getPrimaerschluessel());
